Added Bicycle and animation for its rotation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.24.2)
 project(Computer_graphics_GLUT_lib)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Computer_graphics_GLUT_lib
-        main.cpp)
+add_executable(main main.cpp)
+target_link_libraries(main -lglew32 -lopengl32 -lfreeglut)
